--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@reduxjs/toolkit": "^2.6.0",
+    "axios": "^1.8.1",
     "clsx": "^2.1.1",
     "moment": "^2.30.1",
     "react": "^19.0.0",
