--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^2.6.0",
     "axios": "^1.8.1",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.479.0",
     "moment": "^2.30.1",
     "react": "^19.0.0",
     "react-beautiful-dnd": "^13.1.1",
